--- a/.github/workflows/windows-meson-msys2.yml
+++ b/.github/workflows/windows-meson-msys2.yml
@@ -237,7 +237,7 @@ jobs:
       - name: Inject Installer environment variables
         run: |
           set -x
-          echo "DOSBOX_PKG_PATH=$PKG_RELEASE" >> $GITHUB_ENV
+          echo "DOSBOX_PKG_PATH=$(cygpath -w $GITHUB_WORKSPACE)\\${PKG_RELEASE}" >> $GITHUB_ENV
           echo "DOSBOX_INSTALL_OUTFILE=dosbox-staging-installer-${{ matrix.conf.arch }}-${{ env.DOSBOX_GIT_VERSION }}" >> $GITHUB_ENV
            
       - name: Setup release build
