Twark installer dev version number
It may not be happy with 0.0.0.<n>

--- a/.github/workflows/windows-meson-msys2.yml
+++ b/.github/workflows/windows-meson-msys2.yml
@@ -224,7 +224,7 @@ jobs:
           echo "DOSBOX_GIT_VERSION=$DOSBOX_GIT_VERSION" >> $GITHUB_ENV
           ###
           if ! git describe --exact-match --tags HEAD ; then
-            echo "DOSBOX_VERSION=0.0.0.${GITHUB_RUN_ID}" >> $GITHUB_ENV
+            echo "DOSBOX_VERSION=0.0.${GITHUB_RUN_NUMBER}.${GITHUB_RUN_ID}" >> $GITHUB_ENV
           else
             echo "DOSBOX_VERSION=${DOSBOX_GIT_VERSION#v}" >> $GITHUB_ENV
           fi
