--- a/scripts/docker/Dockerfile.base
+++ b/scripts/docker/Dockerfile.base
@@ -1,6 +1,6 @@
 FROM debian:11-slim
 
-RUN apt-get install --no-install-recommends -y \
+RUN apt-get update && apt-get install --no-install-recommends -y \
         cmake \
         g++ \
         build-essential \
