Add FreeType as a package dependency

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -74,6 +74,7 @@ jobs:
               -Dunit_tests=disabled
               -Duse_alsa=false
               -Duse_fluidsynth=false
+              -Duse_freetype=false
               -Duse_mt32emu=false
               -Duse_opengl=false
               -Duse_png=false
@@ -90,7 +91,7 @@ jobs:
       - name: Install dependencies (minimum set)
         if:   matrix.conf.min_dependencies
         run: |
-          sudo apt-get install -y build-essential ccache libsdl2-dev libopusfile-dev python3-setuptools
+          sudo apt-get install -y build-essential ccache libsdl2-dev libopusfile-dev libfreetype-dev python3-setuptools
           sudo pip3 install --upgrade meson ninja
 
       - name: Install dependencies
