--- a/meson_options.txt
+++ b/meson_options.txt
@@ -7,6 +7,9 @@ option('use_opengl', type : 'boolean', value : true,
 option('use_fluidsynth', type : 'boolean', value : true,
        description : 'Enable built-in MIDI support via FluidSynth')
 
+option('use_freetype', type : 'boolean', value : true,
+       description : 'Rasterize fonts using the FreeType font engine')
+
 option('use_mt32emu', type : 'boolean', value : true,
        description : 'Enable built-in MT-32 emulation support')
 
@@ -43,7 +46,7 @@ option('dynamic_core', type : 'combo',
 # OS, installed libraries, and dependencies of those libraries.
 #
 option('try_static_libs', type : 'array',
-       choices : ['fluidsynth', 'mt32emu', 'opusfile', 'png', 'sdl2', 'sdl2_net', 'slirp'], value : [],
+       choices : ['fluidsynth', 'freetype', 'mt32emu', 'opusfile', 'png', 'sdl2', 'sdl2_net', 'slirp'], value : [],
        description : 'Attempt to statically link selected libraries.')
 
 option('unit_tests', type : 'feature', value : 'auto',
